<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/aloud_config"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/ignore_audio_focus_title"
            android:key="ignoreAudioFocus"
            android:summary="@string/ignore_audio_focus_summary"
            android:defaultValue="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pause_read_aloud_while_phone_calls_title"
            android:key="pauseReadAloudWhilePhoneCalls"
            android:summary="@string/pause_read_aloud_while_phone_calls_summary"
            android:defaultValue="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_wake_lock"
            android:key="readAloudWakeLock"
            android:summary="@string/read_aloud_wake_lock_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pref_media_button_per_next"
            android:key="mediaButtonPerNext"
            android:summary="@string/pref_media_button_per_next_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_by_page"
            android:key="readAloudByPage"
            android:summary="@string/read_aloud_by_page_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/system_media_control_compatibility_change"
            android:key="systemMediaControlCompatibilityChange"
            android:summary="@string/system_media_control_compatibility_change_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/stream_read_aloud_audio"
            android:key="streamReadAloudAudio"
            android:summary="@string/stream_read_aloud_audio_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_aloud_cover_carousel"
            android:key="readAloudCoverCarousel"
            android:summary="@string/read_aloud_cover_carousel_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/speak_engine"
            android:key="appTtsEngine"
            android:summary="TTS"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/sys_tts_config"
            android:key="sysTtsConfig"
            android:summary="@string/sys_tts_config_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/read_aloud_preload"
            android:key="audioPreDownloadNum"
            android:summary="@string/read_aloud_preload_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/audio_cache_clean_time"
            android:key="audioCacheCleanTime"
            android:summary="@string/audio_cache_clean_time_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/tts_audio_log_title"
            android:key="ttsAudioLog"
            android:summary="@string/tts_audio_log_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/read_aloud_cover_size"
            android:key="readAloudCoverSize"
            android:summary="@string/read_aloud_cover_size_summary"
            app:iconSpaceReserved="false"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/read_aloud_subtitle_font_size"
            android:key="readAloudSubtitleFontSize"
            android:summary="@string/read_aloud_subtitle_font_size_summary"
            app:iconSpaceReserved="false"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
