<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_sort"
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_sort_desc"
                android:title="@string/sort_desc"
                android:checkable="true"/>
            <group
                android:id="@+id/menu_group_sort"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sort_manual"
                    android:checked="true"
                    android:title="@string/sort_manual"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_auto"
                    android:title="@string/sort_auto"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_name"
                    android:title="@string/sort_by_name"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_url"
                    android:title="@string/sort_by_url"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_time"
                    android:title="@string/sort_by_lastUpdateTime"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_respondTime"
                    android:title="@string/sort_by_respondTime"
                    android:checkable="true"/>
                <item
                    android:id="@+id/menu_sort_enable"
                    android:title="@string/is_enabled"
                    android:checkable="true"/>
            </group>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_groups"
        android:id="@+id/menu_group"
        android:title="@string/menu_action_group"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/menu_group_manage"
                android:title="@string/group_manage"/>
            <item
                android:id="@+id/menu_enabled_group"
                android:title="@string/enabled"/>
            <item
                android:id="@+id/menu_disabled_group"
                android:title="@string/disabled"/>
            <item
                android:id="@+id/menu_group_login"
                android:title="@string/need_login"/>
            <item
                android:id="@+id/menu_group_null"
                android:title="@string/no_group"/>
            <item
                android:id="@+id/menu_enabled_explore_group"
                android:title="@string/enabled_explore"/>
            <item
                android:id="@+id/menu_disabled_explore_group"
                android:title="@string/disabled_explore"/>
            <group android:id="@+id/source_group"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_add_book_source"
        android:title="@string/add_book_source"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_import_local"
        android:title="@string/import_local"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_import_onLine"
        android:title="@string/import_on_line"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_import_qr"
        android:title="@string/import_by_qr_code"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_group_sources_by_domain"
        android:title="@string/group_sources_by_domain"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>
