<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/screen_settings"
        android:key="screenCategory"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/screen_direction_title"
            android:title="@string/screen_direction"
            android:key="screenOrientation"
            android:defaultValue="0"
            android:entryValues="@array/screen_direction_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/screen_time_out"
            android:title="@string/keep_light"
            android:key="keep_light"
            android:defaultValue="0"
            android:entryValues="@array/screen_time_out_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pt_hide_status_bar"
            android:key="hideStatusBar"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/pt_hide_navigation_bar"
            android:key="hideNavigationBar"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/padding_display_cutouts"
            android:key="paddingDisplayCutouts"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/title_bar_mode"
            android:title="@string/title_bar_mode"
            android:key="titleBarMode"
            android:defaultValue="1"
            android:entryValues="@array/title_bar_mode_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/menu_alpha"
            android:key="menuAlpha"
            android:summary="@string/menu_alpha_sum"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_body_to_lh"
            android:key="readBodyToLh"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/read_change_all"
            android:key="defaultSourceChangeAll"
            android:summary="@string/read_change_all_s"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/text_full_justify"
            android:key="textFullJustify"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/text_bottom_justify"
            android:key="textBottomJustify"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/adapt_special_style"
            android:key="adaptSpecialStyle"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/use_zh_layout"
            android:key="useZhLayout"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/show_brightness_view"
            android:key="showBrightnessView"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/use_underline"
            android:key="useUnderline"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/page_control"
        android:key="pageControlCategory"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/read_slider_mode"
            android:title="@string/read_slider_mode"
            android:key="read_slider_mode"
            android:defaultValue="0"
            android:entryValues="@array/read_slider_mode_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/double_page_title"
            android:title="@string/double_page_horizontal"
            android:key="doubleHorizontalPage"
            android:defaultValue="0"
            android:entryValues="@array/double_page_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/progress_bar_behavior_title"
            android:title="@string/progress_bar_behavior"
            android:key="progressBarBehavior"
            android:defaultValue="page"
            android:entryValues="@array/progress_bar_behavior_value"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/mouse_wheel_page"
            android:key="mouseWheelPage"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/volume_key_page"
            android:key="volumeKeyPage"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/volume_key_page_on_play"
            android:key="volumeKeyPageOnPlay"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/key_page_on_long_press"
            android:key="keyPageOnLongPress"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/page_touch_slop_title"
            android:key="pageTouchSlop"
            android:summary="@string/page_touch_slop_summary"
            app:isBottomBackground="true"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
    <io.legado.app.lib.prefs.PreferenceCategory
        android:title="@string/other"
        android:key="otherCategory"
        app:iconSpaceReserved="false">
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/enable_slider_vibrator"
            android:key="sliderVibrator"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/enable_select_vibrator"
            android:key="selectVibrator"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/auto_change_source"
            android:key="autoChangeSource"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/selectText"
            android:key="selectText"
            android:defaultValue="true"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/no_anim_scroll_page"
            android:key="noAnimScrollPage"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.NameListPreference
            android:entries="@array/click_image_way_title"
            android:title="@string/click_image_way"
            android:key="clickImgWay"
            android:defaultValue="2"
            android:entryValues="@array/click_image_way_value"
            app:iconSpaceReserved="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/enable_optimize_render"
            android:key="optimizeRender"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/click_regional_config"
            android:key="clickRegionalConfig"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/disable_return_key"
            android:key="disableReturnKey"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.Preference
            android:title="@string/custom_page_key"
            android:key="customPageKey"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/expand_text_menu"
            android:key="expandTextMenu"
            android:defaultValue="false"
            app:isBottomBackground="true"/>
        <io.legado.app.lib.prefs.SwitchPreference
            android:title="@string/show_read_title_addition"
            android:key="showReadTitleAddition"
            android:defaultValue="true"/>
    </io.legado.app.lib.prefs.PreferenceCategory>
</androidx.preference.PreferenceScreen>
