<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/content_view"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/custom_page_key"/>
    <io.legado.app.ui.widget.text.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/prev_page_key">
        <io.legado.app.lib.theme.view.ThemeEditText
            android:id="@+id/et_prev"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </io.legado.app.ui.widget.text.TextInputLayout>
    <io.legado.app.ui.widget.text.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/next_page_key">
        <io.legado.app.lib.theme.view.ThemeEditText
            android:id="@+id/et_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </io.legado.app.ui.widget.text.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/page_key_set_help"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <com.google.android.material.button.MaterialButton
            android:gravity="center"
            android:id="@+id/tv_reset"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:layout_weight="1"/>
        <Space
            android:layout_width="3dp"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:gravity="center"
            android:id="@+id/tv_ok"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
