<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.button.MaterialButtonToggleGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/theme_toggle_group"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:spacing="2dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"
    app:innerCornerSize="8dp"
    app:selectionRequired="true"
    app:singleSelection="true">
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_system"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/flow_sys"
        android:layout_weight="1"
        android:checkable="true"
        app:checkedIcon="@drawable/ic_check"
        style="@style/Widget.Material3Expressive.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/light_mode"
        android:layout_weight="1"
        android:checkable="true"
        app:checkedIcon="@drawable/ic_check"
        style="@style/Widget.Material3Expressive.Button.OutlinedButton"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_dark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dark_mode"
        android:layout_weight="1"
        android:checkable="true"
        app:checkedIcon="@drawable/ic_check"
        style="@style/Widget.Material3Expressive.Button.OutlinedButton"/>
</com.google.android.material.button.MaterialButtonToggleGroup>
